USE data;

DROP TABLE IF EXISTS PlaylistSong;
DROP TABLE IF EXISTS Playlist;
DROP TABLE IF EXISTS Song;
DROP TABLE IF EXISTS Album;
DROP TABLE IF EXISTS Artist;
DROP TABLE IF EXISTS `User`;

CREATE TABLE IF NOT EXISTS `User` (
  UserID INT auto_increment PRIMARY KEY,
  Username VARCHAR(50) NOT NULL,
  Password VARCHAR(255) NOT NULL
);

CREATE TABLE IF NOT EXISTS Artist (
  ArtistID INT auto_increment PRIMARY KEY,
  Name VARCHAR(50) NOT NULL,
  Genre VARCHAR(50),
  Country VARCHAR(50),
  UserID INT,
  CONSTRAINT fk_artist_user
    FOREIGN KEY (UserID) REFERENCES User(UserID)
    ON UPDATE CASCADE ON DELETE SET NULL
);

CREATE TABLE IF NOT EXISTS Album (
  AlbumID INT auto_increment PRIMARY KEY,
  Title VARCHAR(50) NOT NULL,
  ReleaseDate DATE NOT NULL,
  ArtistID INT NOT NULL,
  CONSTRAINT fk_album_artist
    FOREIGN KEY (ArtistID) REFERENCES Artist(ArtistID)
    ON UPDATE CASCADE ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS Song (
  SongID INT auto_increment PRIMARY KEY,
  Title VARCHAR(50) NOT NULL,
  Duration INT NOT NULL CHECK (Duration > 0),
  AlbumID INT NOT NULL,
  TimesPlayed INT NOT NULL default 0 CHECK (TimesPlayed >= 0),
  CONSTRAINT fk_song_album
    FOREIGN KEY (AlbumID) REFERENCES Album(AlbumID)
    ON UPDATE CASCADE ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS Playlist (
  PlaylistID INT auto_increment PRIMARY KEY,
  Title VARCHAR(50) NOT NULL,
  UserID INT NOT NULL,
  CreatedAt TIMESTAMP not null default CURRENT_TIMESTAMP,
  CONSTRAINT fk_playlist_user
    FOREIGN KEY (UserID) REFERENCES `User`(UserID)
    ON UPDATE CASCADE ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS PlaylistSong (
  PlaylistID INT NOT NULL,
  SongID INT NOT NULL,
  AddedAt TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  PRIMARY KEY (PlaylistID, SongID),
  CONSTRAINT fk_plsong_playlist
    FOREIGN KEY (PlaylistID) REFERENCES Playlist(PlaylistID)
    ON UPDATE CASCADE ON DELETE CASCADE,
  CONSTRAINT fk_plsong_song
    FOREIGN KEY (SongID) REFERENCES Song(SongID)
    ON UPDATE CASCADE ON DELETE CASCADE
);

SHOW TABLES;
